# iqr_4z_robot

./: README.md
iqr_4z_bringup/: CMakeLists.txt  package.xml
iqr_4z_bringup/launch/: iqr_4z_bringup.launch
iqr_4z_bringup/launch/include/: mir.launch.xml  ur3.launch.xml
iqr_4z_bringup/scripts/: create_udev_rules.sh  delete_udev_rules.sh
iqr_4z_bringup/scripts/rules/: robotiq_85_gripper.rules
iqr_4z_description/: CMakeLists.txt  package.xml
iqr_4z_description/launch/: display_robot_model.launch  view_robot.launch
iqr_4z_description/rviz/: view_robot.rviz
iqr_4z_description/urdf/: iqr_4z_robot.urdf.xacro  iqr_support.urdf.xacro  robotiq_gripper_base.urdf.xacro
iqr_4z_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
iqr_4z_moveit_config/config/: controllers.yaml  fake_controllers.yaml  iqr_4z_robot.srdf  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml
iqr_4z_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  iqr_4z_robot_moveit_controller_manager.launch.xml  iqr_4z_robot_moveit_planning_execution.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
